--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
     "@yext/search-headless-react": "^2.0.1",
     "@yext/search-ui-react": "^1.0.2",
     "react": "^17.0.2",
+    "react-collapse": "^5.1.1",
+    "react-collapsed": "^3.6.0",
     "react-dom": "^17.0.2",
     "react-router": "^6.8.2",
+    "react-router-dom": "^6.9.0",
     "vite-plugin-sass-dts": "^1.3.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.49",
+    "@types/react-collapse": "^5.0.1",
     "@types/react-dom": "^17.0.17",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
