--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@css-modules-theme/core": "^2.3.0",
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@react-google-maps/api": "^2.18.1",
     "@yext/answers-headless-react": "^1.2.0",
     "@yext/search-headless-react": "^2.0.1",
